fix reply tile vertically non aligned text issue Reply-quotes of code blocks have unsymmetrical padding #21870

--- a/res/css/views/rooms/_ReplyTile.pcss
+++ b/res/css/views/rooms/_ReplyTile.pcss
@@ -89,7 +89,7 @@ limitations under the License.
             display: -webkit-box;
             -webkit-box-orient: vertical;
             -webkit-line-clamp: $reply-lines;
-            padding: 4px;
+            padding: 4px 4px 0px 4px;
         }
 
         .markdown-body blockquote,
